<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">ASCH钱包 Pro</string>
    <string name="app_name_test">ASCH钱包Test</string>
    <string name="term_service_title">
        关于用户账户私钥的风险声明
    </string>
    <string name="term_service">
        \n

        尊敬的用户：\n\n

        \t\t当您选择注册为阿希链用户之时起，系统会自动给您生成一个阿希链地址。阿希链即视为您已经认真阅读、知悉、理解并完全同意该风险声明的全部内容。

        您注册为阿希链的用户，创建账户即生成私钥，用户须自行保存私钥。当您忘记私钥时，您阿希链地址上的所有资产将永远丢失，并且无法找回，由此造成的任何损失和责任均由您个人承担。阿希链没有权利且无任何义务以任何形式存储或保存您的私钥，也绝无可能获取或泄露您的私钥。
        \n\n

        \t\t所以请您务必妥善保管和存储自己的私钥，以免造成不必要的麻烦。\n\n

        敬请周知\n\n

        阿希链\n
    </string>
    <string name="remark_err">备注长度不能超过255个字符</string>
    <string name="go_rate">去评分</string>
    <string name="update_version">版本更新</string>
    <string name="contact_us">联系我们</string>
    <string name="transfer_amount_dialog">转账金额：</string>
    <string name="recipients_address">收款方地址：</string>
    <string name="recipients_nickname">收款方昵称：</string>
    <string name="transfer_confirm_hint">数字资产转账一旦确认，将不可找回，请务必确认,您转账的地址和金额是否正确。</string>
    <string name="confirm_transfer">转账确认</string>
    <string name="title_activity_vote">VoteActivity</string>
    <string name="create_gateway_account_dialog">您还没有开通%s充值地址，该操作消耗0.1XAS</string>
    <string name="fast">快</string>
    <string name="slow">慢</string>
    <string name="bch_hint">*BCH提现手续费为BCH网络矿工收取，为了保障您的交易可以正常进行，提现手续费最低为0.00001 BCH，但考虑到区块链网络拥堵的可能，您可以根据自身实际需求增加打包费用。</string>
    <string name="withdraw_amount_hint">请输入提现金额</string>
    <string name="address_input_hint">请输入你想提现的地址</string>
    <string name="main_asset">主资产</string>
    <string name="uia_asset">链内资产</string>
    <string name="gateway_asset">跨链资产</string>
    <string name="add_asset">添加资产</string>
    <string name="receipt_code">收款码</string>
    <string name="done">完成</string>
    <string name="record_transfer">转账记录</string>
    <string name="record_deposit">充值记录</string>
    <string name="record_withdraw">提现记录</string>
    <string name="withdraw">提现</string>
    <string name="remember_second_password_info">功能开启后，后续交易将不再需要输入二级密码</string>
    <string name="remember_second_password">开启免输二级密码功能</string>
    <string name="xas_transfer">XAS转账</string>
    <string name="account_balance">账户余额</string>
    <string name="transaction_fee">手续费0.1XAS</string>
    <string name="transfer_record">交易记录</string>
    <string name="second_pwd_info">注意！设置二级密码可以让你的资产更安全，但是二级密码是记录在区块链上的，一旦丢失，将无法找回或者修改，请务必认真保管。\n\n设置二级密码将消耗5XAS的手续费。</string>
    <string name="set_now">立即设置 </string>
    <string name="wallet_slogan">轻 松 管 理 你 的 资 产</string>
    <string name="init_wallet">初始化钱包</string>
    <string name="wallet_pwd">钱包密码</string>
    <string name="ensure_wallet_pwd">确认钱包密码</string>
    <string name="set_password_info">*请输入8-16位钱包密码，需要同时满足英文、数字。</string>
    <string name="password_unvalid">请输入8-16位钱包密码，需要同时满足英文、数字。</string>
    <string name="account_remark_hint">*6-12位字母、数字、下划线</string>
    <string name="secret_key_hint">请输入你的助记词，使用空格分离开</string>
    <string name="secure_setting">安全设置</string>
    <string name="account_backup">账户备份</string>
    <string name="second_pwd">二级密码</string>
    <string name="enter_wallet_pwd">请输入钱包密码</string>
    <string name="backup_attention">注意！拥有钱包私钥就能完全控制钱包资产。\n因此强烈建议你使用钱包前做好备份，
    将钱包私钥保存到安全的地方</string>
    <string name="backup_now">立即备份</string>
    <string name="backup_info">钱包助记词用于恢复钱包资产，拥有钱包私钥就能完全控制钱包资产，请务必妥善保管，
    丢失助记词即丢失钱包资产，ASCH不储存用户助记词，无法提供找回功能</string>
    <string name="backup_order">请根据你记下的助记词，按照顺序点击，验证你备份的助记词正确无误</string>
    <string name="check_order_err">请按顺序点选助记词，以确认您的备份无误</string>
    <string name="check_order_success">备份成功！</string>
    <string name="check_order_success_content">请妥善保管您的助记词</string>
    <string name="account_del">请输入你的助记词，使用空格分离开</string>
    <string name="del_err">助记词不匹配，请重新检查后输入</string>
    <string name="receive_info">*请将%s充值到上述地址，该地址可用于接收XAS、ASCH链内资产、ASCH跨链资产</string>
    <string name="receive_multi_chain">*请将 %s充值到上述地址，该地址仅支持接收 %s，如果需要转入其他 token，请切换到相对应的 token，获取对应token的收款地址。</string>
    <string name="err_get_asset">获取资产异常</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="asch">Asch</string>
    <string name="phone_wallet">手机钱包</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="add_account">添加账户</string>
    <string name="create_account">创建新账户</string>
    <string name="set_wallet_pwd">设置钱包密码</string>
    <string name="import_account">导入账户</string>
    <string name="terms_service">默认阅读并同意阅读条款</string>
    <string name="service_term">服务条款</string>
    <string name="read_service">请仔细阅读并同意服务条款</string>
    <string name="photo_permission">扫描二维码需要打开相机和闪光灯的权限</string>
    <string name="photo_permission_content">
        图片选择需要以下权限:

        1.访问设备上的照片

        2.拍照</string>
    <string name="secret_key">私钥</string>
    <string name="secret_key_null">私钥不能为空</string>
    <string name="secret_key_error">私钥格式不符合BIP39规范</string>
    <string name="wallet_name_invalid">账户备注必须是6-12位字母、数字或下划线</string>
    <string name="account_name">账户名称</string>
    <string name="wallet_name_input">请输入钱包名称</string>
    <string name="wallet_name_exist">此账户名称已存在</string>
    <string name="password_short">请输入不少于8位字符的密码</string>
    <string name="password_inconsistency">密码不一致,请重新输入</string>
    <string name="password_input_hint">密码(不少于8位字符)</string>
    <string name="password_repeat">重复密码</string>
    <string name="password_hint">密码提示（可不填）</string>
    <string name="account_hint">账户备注</string>
    <string name="remark_hint">注意：请备份好你的密码，该账户不提供密码找回功能，密码用于加密保护私钥，强度非常重要。</string>
    <string name="safety_tip">安全提示</string>
    <string name="account_creation_success">尊敬的用户您好，当前账户已经创建成功，为了账户资金安全考虑，务必请您对账户进行备份！</string>
    <string name="out_off_hint">再按一次退出程序</string>
    <string name="assets">资产</string>
    <string name="find_out">发现</string>
    <string name="mine">我的</string>
    <string name="please_backup">请备份</string>
    <string name="have_backup">已备份</string>
    <string name="net_error">网络错误</string>
    <string name="xas_balance">XAS</string>
    <string name="back">返回</string>
    <string name="close">关闭</string>
    <string name="title">标题</string>
    <string name="development">该功能正在开发者，尽情期待...</string>
    <string name="kmc">孔明屋</string>
    <string name="cctime">CCTime</string>
    <string name="node_vote">受托人投票</string>
    <string name="vote">投票</string>
    <string name="account_management">账户管理</string>
    <string name="system_set">系统设置</string>
    <string name="set">设置</string>
    <string name="contact_person">联系人</string>
    <string name="block_details">区块详情</string>
    <string name="about">关于我们</string>
    <string name="account_create_success">新账户创建成功</string>
    <string name="backup_account">备份账户</string>
    <string name="delete_account">删除账户</string>
    <string name="backup_how">如何备份账户</string>
    <string name="master_password_create_fail">生成账户主密码失败,请重试</string>
    <string name="accounts_exist">此账户已经存在</string>
    <string name="accounts_create_fail">账户创建失败</string>
    <string name="mnemonic_backup">助记词备份</string>
    <string name="important_note">重要提示</string>
    <string name="copy">复制</string>
    <string name="sure_copy">已经复制到粘贴板，但还需您手动备份到安全的地方！</string>
    <string name="note_content">助记词用于恢复账户，只能备份一次，请将它抄下来，并保存在安全的地方！</string>
    <string name="sure_backup">请您确认：助记词是否已经备份到安全的地方？备份的机会只有一次，若已经备份，请点击"确定"；若还没有备份，请点击"取消"重新进行备份！</string>
    <string name="import_fail">导入账户失败</string>
    <string name="import_success">导入账户成功</string>
    <string name="scan">扫一扫</string>
    <string name="receipt">收款</string>
    <string name="bill">账单</string>
    <string name="management_wallet">管理钱包</string>
    <string name="photo">相册</string>
    <string name="qr_invalid">二维码格式无效</string>
    <string name="address_invalid">无效地址</string>
    <string name="qr_not_found">未发现二维码</string>
    <string name="bar_code_direction">将条码放入框内，即可自动扫描</string>
    <string name="qr_code_direction">将二维码放入框内，即可自动扫描</string>
    <string name="photo_open_error">打开相机出错</string>
    <string name="transfer">转账</string>
    <string name="receive">接收</string>
    <string name="asset_transfer">资产转账</string>
    <string name="payee_address_input_hint">请输入ASCH收款地址或昵称</string>
    <string name="transfer_amount">请输入转账金额</string>
    <string name="secondary_password">二级密码</string>
    <string name="remark">备注</string>
    <string name="cost_hint">网络费用</string>
    <string name="next">下一步</string>
    <string name="select_coin">请选择币种</string>
    <string name="address_same">接受地址和发送地址不能相同</string>
    <string name="invalid_money">无效金额</string>
    <string name="money_not_enough">账户余额不够</string>
    <string name="secondary_password_error">二级密码不正确</string>
    <string name="account_password_error">账户密码不正确</string>
    <string name="receipt_rq_error">收款二维码有错误</string>
    <string name="transfer_to">向对方转账</string>
    <string name="account_input_title">请输入账户密码</string>
    <string name="account_input">账户密码</string>
    <string name="account_pwd_hint">请输入当前账户密码</string>
    <string name="transfer_success">转账成功</string>
    <string name="asset_get_error">获取资产错误</string>
    <string name="qr_receipt">二维码收款</string>
    <string name="receipt_qr">收款二维码</string>
    <string name="set_money">设置金额</string>
    <string name="save_qr">保存二维码</string>
    <string name="copy_address">复制收款地址</string>
    <string name="transaction_record">交易记录</string>
    <string name="transaction_details">交易详情</string>
    <string name="transaction_id">交易ID</string>
    <string name="transaction">交易</string>
    <string name="transaction_type">交易类型</string>
    <string name="transaction_time">交易时间</string>
    <string name="transaction_sender">转出账户</string>
    <string name="transaction_receiver">收款账户</string>
    <string name="transaction_money">金额</string>
    <string name="transaction_cost">交易费</string>
    <string name="sure_time">确认数</string>
    <string name="block_id">区块ID</string>
    <string name="all_account">所有账户</string>
    <string name="language_select">语言选择</string>
    <string name="node_url">节点URL</string>
    <string name="set_node_url">设置节点URL</string>
    <string name="set_pin">设置Pin码</string>
    <string name="zh_cn">中文</string>
    <string name="node_url_error">节点URL格式不对</string>
    <string name="save_success">保存成功</string>
    <string name="save">保存</string>
    <string name="wallet_node_url">钱包节点URL</string>
    <string name="wallet_url_input_hint">输入钱包节点URL</string>
    <string name="set_wallet_url_default">设置默认节点URL</string>
    <string name="pin_input_hint">请输入6位数字密码</string>
    <string name="use_explain">使用手册</string>
    <string name="about_us">关于我们</string>
    <string name="open_browser">打开浏览器</string>
    <string name="node_list">受托人列表</string>
    <string name="vote_record">投票记录</string>
    <string name="vote_me">谁投了我</string>
    <string name="block_info">区块信息</string>
    <string name="last_block_height">最后区块高度</string>
    <string name="last_block_time">最后区块时间</string>
    <string name="versions_info">版本信息</string>
    <string name="version_node">版本</string>
    <string name="net">网络</string>
    <string name="get_uia_error">获取UIA资产错误</string>
    <string name="account_have_backup">该账户已经备份过</string>
    <string name="password_error">密码输入不正确,请重新输入</string>
    <string name="only_one_account">当前钱包只有一只账户，不能删除</string>
    <string name="delete_success">删除成功</string>
    <string name="account_input_tip">账户名称只能是字母数字或者下划线</string>
    <string name="personal_center">个人中心</string>
    <string name="forget_pin">忘记pin码?</string>
    <string name="not_set">未设置</string>
    <string name="nickname">昵称</string>
    <string name="account_remark">账户备注</string>
    <string name="max_issue_amount_colon">最大发行量：</string>
    <string name="hint_issue_amount">请输入本次要发行的数量</string>
    <string name="issue_asset_cost_note">* 发行操作需要消耗0.1XAS</string>
    <string name="issue">发行</string>
</resources>