<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@android:color/transparent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:background="@android:color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginVertical="10dp"
                android:text="@string/secret_key"
                />
            </LinearLayout>
        <EditText
            android:id="@+id/seed_et"
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:background="@color/white"
            android:hint="@string/secret_key_hint"
            android:textSize="13sp"
            android:textColor="#333333"
            android:enabled="true"
            android:gravity="top"
            android:padding="8dp"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:minLines="2"
            android:maxLines="6" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@android:color/white"
        >
        <EditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/account_hint"
            android:textSize="15sp"
            android:textColor="#333333"
            android:inputType="textPersonName"
            android:maxLines="1" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_text"
        android:textSize="12sp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/account_remark_hint" />

    <Button
        android:id="@+id/import_btn"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        style="@style/PrimaryButton.Style"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:text="@string/import_account" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        >

        <!-- footer -->

    </FrameLayout>


</LinearLayout>
</ScrollView>