<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_asset"
        android:textColor="@color/black"
        android:layout_margin="10dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/asset_manage_rcv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gateway_asset"
        android:textColor="@color/black"
        android:layout_margin="10dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/asset_manage_rcv_gateway"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uia_asset"
        android:textColor="@color/black"
        android:layout_margin="10dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/asset_manage_rcv_uia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"

        />

</LinearLayout>

