<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/bg_white_rect_circle_border"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_transfer"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_margin="20dp"
            />


        <RelativeLayout
            android:background="@color/gray_back_dialog"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"

            android:padding="4dp">

           <ImageView
               android:id="@+id/img_transfer_tag"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@mipmap/icon_jingtao"
               android:layout_alignParentLeft="true"
               android:layout_centerVertical="true"
               android:layout_margin="5dp"
               />

            <TextView
                android:id="@+id/title_tv"
                android:layout_toRightOf="@id/img_transfer_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/transfer_confirm_hint"
                android:textColor="@color/gray_text"

                android:textSize="12sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="20dp"
            android:background="@color/divider_color" />

        <RelativeLayout
            android:id="@+id/dialog_transfer_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            >

           <TextView
               android:id="@+id/dialog_nickname_tag"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentLeft="true"
               android:textColor="@color/black"
               android:text="@string/recipients_nickname"/>

            <TextView
                android:id="@+id/dialog_nickname_state"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_set"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/dialog_address_tag"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/recipients_address"/>

        <RelativeLayout
            android:id="@+id/dialog_address_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical"
            android:background="@color/gray_back_dialog"
            android:layout_margin="20dp"
            >

            <TextView
                android:id="@+id/dialog_address"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="****"/>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">
            <TextView

                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/transfer_amount_dialog"/>
            <TextView
                android:id="@+id/dialog_currency"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color"
                android:text=""/>


        </LinearLayout>



        <TextView
            android:id="@+id/dialog_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:background="@null"
            android:cursorVisible="true"
            android:textSize="20sp"
            android:text="0"
            android:maxLines="1"
            android:textColor="@color/main_color" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_color"
            android:layout_margin="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center"
                android:background="@color/gray_text"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/dialog_transfer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/transfer"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center"
                android:background="@color/main_color"
                android:textColor="@color/white"/>


        </LinearLayout>



    </LinearLayout>
</LinearLayout>