<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallet_node_url"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@android:color/white"
        >
        <EditText
            android:id="@+id/url_et"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/wallet_url_input_hint"
            android:textSize="15sp"
            android:textColor="#333333"
            android:inputType="textPersonName"
            android:maxLines="1" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"
            />
    </LinearLayout>
    <!--<EditText-->
        <!--android:id="@+id/url_et"-->
        <!--android:hint="输入钱包节点URL"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp"-->
        <!--android:text=""-->
        <!--/>-->
<Button
    android:layout_marginTop="20dp"
    android:id="@+id/default_url_btn"
    android:layout_gravity="center"
    android:background="@drawable/primary_btn_selector"
    android:layout_width="200dp"
    android:layout_height="40dp"
    android:textColor="@android:color/white"
    android:textSize="15sp"
    android:text="@string/set_wallet_url_default"
    />
</LinearLayout>