<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:background="@color/page_bg"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:id="@+id/check_pwd_blank"
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <include
            android:id="@+id/set_pwd_edit1"
            layout="@layout/password_edittext"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>

        <include
            android:id="@+id/set_pwd_edit2"
            layout="@layout/password_edittext"
            />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_password_info"
        android:textColor="#FF999999"
        android:textSize="10sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        />


    <Button
        android:id="@+id/create_btn"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        style="@style/PrimaryButton.Style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:text="@string/set" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/remark_hint"
        android:textColor="#888888"
        android:textSize="10sp" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

    </FrameLayout>
</LinearLayout>
</ScrollView>